--- a/_posts/2010-08-09-railroad.md
+++ b/_posts/2010-08-09-railroad.md
@@ -4,12 +4,13 @@ title: RailRoad Gem
 date: '2010-08-09 02:07:44 -0700'
 categories:
 - Ruby on Rails
-tags: []
-comments: []
+tags:
+- diagram
+- models
+- activerecord
 ---
-I just discovered that there is a Ruby gem which generates diagrams based on Rails models (ActiveRecord). I ran across this website a while back, but didn't quite connect the dots. I was just reading <a href="http://plasti.cx/2007/07/29/rails-models-in-a-namespace" target="_blank">an article</a> on placing models into their own namespace, and I realized that the diagram it uses as an example was generated using RailRoad.
+I just discovered that there is a Ruby gem which generates diagrams based on Rails models (ActiveRecord). I ran across this website a while back, but didn't quite connect the dots. I was just reading [an article](http://plasti.cx/2007/07/29/rails-models-in-a-namespace) on placing models into their own namespace, and I realized that the diagram it uses as an example was generated using RailRoad.
 
-<a href="http://railroad.rubyforge.org/" target="_blank">http://railroad.rubyforge.org/</a>
+[http://railroad.rubyforge.org/](http://railroad.rubyforge.org/)
 
-<a href="http://railroad.rubyforge.org/" target="_blank"></a><img class="size-full wp-image-594 alignnone" title="rtplan_models_full" src="http://www.redconfetti.com/wp-content/uploads/2010/08/rtplan_models_full.png" alt="" width="500" height="612" />
-
+![Railroad model diagram](/images/posts/rtplan_models_full.png "Railroad model diagram")
