Troubleshooting prepending filter

--- a/resources/notes/es-2015.md
+++ b/resources/notes/es-2015.md
@@ -1,6 +1,7 @@
-# ES2015
-
-## The Shape of Javascript to Come
+---
+layout: page
+title: ES2015 Notes
+---
 
 ES2015, formerly known as ES6, is the most extensive update to the JavaScript language since the publication of its first edition in 1997.
 
