Converting to 80 char line length. Fixing link format

--- a/_posts/2010-08-09-railroad.md
+++ b/_posts/2010-08-09-railroad.md
@@ -9,8 +9,16 @@ tags:
 - models
 - activerecord
 ---
-I just discovered that there is a Ruby gem which generates diagrams based on Rails models (ActiveRecord). I ran across this website a while back, but didn't quite connect the dots. I was just reading [an article](http://plasti.cx/2007/07/29/rails-models-in-a-namespace) on placing models into their own namespace, and I realized that the diagram it uses as an example was generated using RailRoad.
 
-[http://railroad.rubyforge.org/](http://railroad.rubyforge.org/)
+I just discovered that there is a Ruby gem which generates diagrams based on
+Rails models (ActiveRecord). I ran across this website a while back, but
+didn't quite connect the dots. I was just reading [an article][1] on placing
+models into their own namespace, and I realized that the diagram it uses as an
+example was generated using RailRoad.
 
-![Railroad model diagram](/images/posts/rtplan_models_full.png "Railroad model diagram")
+http://railroad.rubyforge.org/
+
+![Railroad model diagram][2]
+
+[1]: http://plasti.cx/2007/07/29/rails-models-in-a-namespace
+[2]: /images/posts/rtplan_models_full.png
