Updates ansible article

--- a/_drafts/2019-03-23-ansible.md
+++ b/_drafts/2019-03-23-ansible.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 published: true
-title: Developing and Deploying in the Cloud
-description: A Guide to using Amazon Cloud9 and Ansible with Amazon Web Services
+title: Configuring Your Development Environment
+description: Using Ansible locally to configure Amazon Cloud9
 image_url: /images/posts/2019-03-23-ansible-logo.png
 date: 2019-03-23 12:56:00 -0800
 categories:
@@ -13,79 +13,86 @@ tags:
   - aws
   - software provisioning
   - configuration management
-  - application deployment
 ---
 
-This guide assumes that you already have an Amazon Cloud9 environment setup
-and connected to an EC2 instance running Amazon Linux (a Red-Hat related
-distribution), and that you have pre-existing experience with [Git].
+This guide is oriented around applying the "infrastructure as code" methodology
+to your local development environment, with the goal of creating a Github
+repository that will facilitate the setup and maintenance of your development
+environment.
 
-We will use a tool known as Ansible to maintain the state of our Cloud9
-development environment, as well as maintaining and deploying a static website
-to a production environment.
+This guide provides steps based on the setup of an Amazon Linux EC2 instance
+connected to the [Amazon Cloud9 Web-based IDE]. I've chosen this environment
+for this guide to ensure the commands below will consistently work for you,
+and also because of the low cost. It is [free for new Amazon AWS users] for 12
+months, or less than $10 per month to those using a `t2.micro` EC2 instance that
+is turned off by Cloud9 after 30 minutes of non-activity.
+
+This guide assumes that you already have an [Amazon Cloud9 environment setup]
+with an EC2 instance running the default Amazon Linux distribution based on
+Red-Hat Enterprise Linux (RHEL). It also assumes that you have experince with
+[Git].
 
 After you are finished with this guide, you should be able to use the
-configuration you have established to maintain your existing environments,
-or re-establish them again in new environments. Should your Cloud9 EC2 instance
-become terminated/destroye, you'll be able to checkout your Ansible
-configuration from Git and re-provision your environments quickly and easily.
+configuration you have established to maintain your development environment,
+as well as automate the setup of a new development environment in the event
+that your EC2 instance is terminated/destroyed.
 
-You should also be able to continue beyond this guide configuring and managing
-whatever infrastructure is needed.
+You will also be able to continue beyond this guide in configuring additional
+systems to host your website or other applications, as well as automating
+deployment of software updates to those systems.
 
-[Git]: https://en.wikipedia.org/wiki/Git
+[free for new Amazon AWS users]: https://aws.amazon.com/free/
+[Amazon Cloud9 Web-based IDE]: https://aws.amazon.com/cloud9/
+[amazon cloud9 environment setup]: https://docs.aws.amazon.com/cloud9/latest/user-guide/setup-express.html
+[git]: https://en.wikipedia.org/wiki/Git
 
-# Introduction
+# Ansible
 
 [Ansible] is a an open-source tool you can use to install and configure
 software on your Linux systems, as well as deploy new software updates.
 
-Ansible is programmed in Python, however you do not need to know Python to use it.
-
-All you need to do is learn to understand [YAML], [Jinja templates], and read
+Ansible is programmed in Python, however you do not need to know Python to use
+it. You may need to gain an understanding of [YAML], [Jinja templates], and read
 the [Ansible Project Documentation].
 
-This guide uss Ansible not as an Ad-Hoc (command line) tool, but instead as a
-repository of files used to manage a local or remote infrastructure.
+This guide will use Ansible to setup and maintain your local development
+environment.
 
-To serve as an example, this guide will configure Ansible to run locally on the
-Amazon Linux EC2 instance that is setup by default with the
-[Amazon Cloud9 Web-based IDE], and then expand that configuration to provision
-another EC2 instance that will host a static website.
-
-[Amazon Cloud9 Web-based IDE]: https://aws.amazon.com/cloud9/
 [Ansible]: https://en.wikipedia.org/wiki/Ansible_(software)
 [Ansible Project Documentation]: https://docs.ansible.com/
 [YAML]: https://en.wikipedia.org/wiki/YAML
 [Jinja templates]: https://en.wikipedia.org/wiki/Jinja_(template_engine)
 
-# A Note About Idempotency
+## A Note About Idempotency
 
-After provisioning the software and configurations for the first time, Ansible
-can be used to maintain the state of your infrastructure in an idempotent
-manner.
+Ansible is designed to be used to maintain your systems in an Idempotent manner.
+This means that you can run commands with Ansible that will always bring about
+the desired outcome, no matter how many times you run them.
 
-This means that you can run a command for Ansible to connect to your servers
-and perform checks on each server to ensure that they're running the software
-you expect, with the configuration you expect. If the state of the machine
-isn't as expected, Ansible will then perform the right steps to re-apply the
-expected state to the machine. This means that you can run an Ansible command
-or playbook over and over again, and the outcome should be the same everytime.
-
-This however depends on the Ansible modules you use, and how they are configured
-to maintain the state of your infrastructure.
+Ansible does this by checking if an aspect of your system is in the desired
+state currently, and only if it is not does it make the required change to the
+system.
 
 It is possible that with certain practices you can run into an issue known as
-"configuration drift".
-
-Refer to [Ansible Idempotency and Configuration Drift] later for information
-on avoiding this issue.
+"configuration drift". Refer to [Ansible Idempotency and Configuration Drift]
+for more information on avoiding this issue.
 
 [Ansible Idempotency and Configuration Drift]: https://shadow-soft.com/ansible-idempotency-configuration-drift/
 
 # Establishing a Git repository
 
+You want to establish a [new Github repository] to store your Ansible
+configuration. After you've done this, use Git to clone the repository
+into your local environment.
 
+Here's the command I used with [my own repository]:
+
+```bash
+git clone git@github.com:redconfetti/cloud9-dev.git
+```
+
+[new Github repository]: https://github.com/new
+[my own repository]: https://github.com/redconfetti/cloud9-dev 
 
 # Installing the Ansible Engine
 
@@ -106,32 +113,127 @@ sudo apt-add-repository --yes --update ppa:ansible/ansible
 sudo apt-get install ansible
 ```
 
-See [Ansible Installation Guide] for other system installation instructions.
+Next setup a script in your own repository to run initial
+setup commands (`setup.sh`).
+```bash
+#!/usr/bin/env bash
 
-The machine that you install and run Ansible from is usually referred to as
-the 'management node'.
+# Update OS
+sudo yum update
+
+# Install Ansible for RHEL, CentOS, or Amazon Linux
+sudo yum install ansible
+```
+
+Use Git to make the script executable.
+```bash
+git add --chmod=+x setup.sh
+```
+
+See [Ansible Installation Guide] for other system installation instructions.
 
 [Ansible Installation Guide]: https://docs.ansible.com/ansible/latest/installation_guide/intro_installation.html
 
-# Configuration
+# Ansible Configuration
 
-After completing the install, the default Ansible configuration files is located
-under `/etc/ansible/ansible.cfg`.
+The default Ansible configuration file is located under
+`/etc/ansible/ansible.cfg`. A `.ansible.cfg` file located in your home directory
+can also be configured to over-ride these defaults.
 
-# Inventory
+Ansible is designed to be used from a specific machine that is designated as the
+"management node" that is used to orchestrate the setup and configuration of
+many other machines. This is why the default configurations exist globally
+under `/etc/ansible`.
+
+We want Ansible to use the files stored in our Git repository, so create a
+new `ansible.cfg` file in the root folder of the new repository.
+
+```
+[defaults]
+inventory = hosts.yml
+```
+
+When running Ansible commands from the root directory of our repository, it will
+also over-ride the default and user-specific configurations, but keep in mind
+that this method can introduce a security risk.
+
+See Ansible Configuration Documentation:
+
+- [Avoiding security risks with ansible.cfg in the current directory]
+- [Configuring Ansible]
+- [Ansible Configuration Settings]
+- [ansible-config]
+
+[Avoiding security risks with ansible.cfg in the current directory]: https://docs.ansible.com/ansible/latest/reference_appendices/config.html#cfg-in-world-writable-dir
+[Configuring Ansible]: https://docs.ansible.com/ansible/latest/installation_guide/intro_configuration.html
+[Ansible Configuration Settings]: https://docs.ansible.com/ansible/latest/reference_appendices/config.html#ansible-configuration-settings-locations
+[ansible-config]: https://docs.ansible.com/ansible/latest/cli/ansible-config.html
+
+# Ansible Inventory
 
 Ansible is able to manage the state of multiple machines. By default, the
 inventory is defined in `/etc/ansible/hosts` using a format similar to an
-[INI file].
+[INI file]. Alternatively you can use a YAML file to define your inventory.
 
-```
+As you saw above, we configured Ansible to recognize the `hosts.yaml` file
+located in the root directory of the repository.
 
+Create that file now with the following contents that defines the local
+machine as 'local'.
+```yaml
+all:
+  hosts:
+    local:
+      ansible_host: localhost
+      ansible_connection: local
 ```
 
 For more information, see [Ansible - Working with Inventory]
 
 [Ansible - Working with Inventory]: https://docs.ansible.com/ansible/latest/user_guide/intro_inventory.html
 [INI file]: https://en.wikipedia.org/wiki/INI_file
+
+# Ansible Ad-Hoc Commands
+
+Ansible is designed to connect to each host using SSH key authentication,
+run the commands necessary, and then output the results of each task in the
+output of the command line. Because we're configured to connect to our local
+system, we do not have to worry about SSH connections or configuration.
+
+Ansible can be used to perform checks against hosts using a single command
+line command, known as an 'ad-hoc' command.
+
+Run the command `ansible all -m ping` and you should see the following.
+```bash
+$ ansible all -m ping
+local | SUCCESS => {
+    "changed": false, 
+    "ping": "pong"
+}
+```
+
+Now we're ready to get started with the actual configuration.
+
+See [Introduction To Ad-Hoc Commands]
+
+[Introduction To Ad-Hoc Commands]: https://docs.ansible.com/ansible/latest/user_guide/intro_adhoc.html
+
+# Ansible Playbooks
+
+Ad-hoc commands are useful, but playbooks are where we can define the state of
+our system(s).
+
+Much like the `hosts.yml` file defined above, playbooks are defined in YAML
+format. YAML is not a programming language, but a format for storing
+information. In this case the information is our configuration that Ansible
+modules are defined to interpret and apply to certain Linux environments
+(hosts).
+
+
+
+See [Intro to Playbooks]
+
+[Intro to Playbooks]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_intro.html
 
 # Modules
 
@@ -150,3 +252,5 @@ ansible-doc <module-name>
 # View 'hostname' module documentation
 ansible-doc hostname
 ```
+
+
