Further updates to Ansible article

--- a/_drafts/2019-03-23-ansible.md
+++ b/_drafts/2019-03-23-ansible.md
@@ -186,6 +186,7 @@ all:
     local:
       ansible_host: localhost
       ansible_connection: local
+      ansible_python_interpreter: /usr/bin/python27
 ```
 
 For more information, see [Ansible - Working with Inventory]
@@ -226,14 +227,50 @@ our system(s).
 Much like the `hosts.yml` file defined above, playbooks are defined in YAML
 format. YAML is not a programming language, but a format for storing
 information. In this case the information is our configuration that Ansible
-modules are defined to interpret and apply to certain Linux environments
-(hosts).
+modules are defined to interpret and apply to certain hosts.
+
+A playbook can contain one or more "plays" that applies a certain state known
+as a "role" to a group of hosts. A role is represented by one or more tasks
+performed by an Ansible module.
+
+The Amazon Linux distribution used by the EC2 instance uses a package manager
+called Yum (Yellowdog Updater Modified). Ansible provides the [Yum module] to
+use this package manager to install or update the software on the host.
+
+Create a file named `local.yml` with the following contents.
+```yaml
+---
+# This playbook deploys the entire setup to the Cloud9 development environment.
+- hosts: localhost
+  connection: local
+  tasks:
+    - name: upgrade all packages
+      yum:
+        name: '*'
+        state: latest
+```
+
+Run the following command to run this playbook against the local environment.
+
+```bash
+ansible-playbook local.yml
+```
+
+```shell
+TASK [upgrade all packages] ****************************************************
+fatal: [localhost]: FAILED! => {"changed": false, "msg": "The Python 2 bindings
+for rpm are needed for this module. If you require Python 3 support use the
+`dnf` Ansible module instead.. The Python 2 yum module is needed for this
+module. If you require Python 3 support use the `dnf` Ansible module instead."}
+        to retry, use: --limit @/home/ec2-user/src/cloud9-dev/local.retry
+```
 
 
+See [Intro to Playbooks] or [Modules by Category].
 
-See [Intro to Playbooks]
-
+[yum module]: https://docs.ansible.com/ansible/latest/modules/yum_module.html
 [Intro to Playbooks]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_intro.html
+[Modules by Category]: https://docs.ansible.com/ansible/latest/modules/modules_by_category.html
 
 # Modules
 
