Updated Ansible article

--- a/_drafts/2019-03-23-ansible.md
+++ b/_drafts/2019-03-23-ansible.md
@@ -96,21 +96,12 @@ git clone git@github.com:redconfetti/cloud9-dev.git
 
 # Installing the Ansible Engine
 
-Here are some of the commands to install Ansible on common Linux distributions.
-I'm including the Amazon Linux compatible command first, but including others.
+To ensure that we don't have any conflicts between Python v2.7 and v3.6
+installed
 
 ```bash
-# Install for RHEL, CentOS, or Amazon Linux
-sudo yum install ansible
-
-# Install for Fedora
-sudo dnf install ansible
-
-# Configure PPA and Install for Ubuntu
-sudo apt-get update
-sudo apt-get install software-properties-common
-sudo apt-add-repository --yes --update ppa:ansible/ansible
-sudo apt-get install ansible
+# Install Ansible using Python 2.7
+/usr/bin/pip-2.7 install ansible
 ```
 
 Next setup a script in your own repository to run initial
@@ -121,8 +112,8 @@ setup commands (`setup.sh`).
 # Update OS
 sudo yum update
 
-# Install Ansible for RHEL, CentOS, or Amazon Linux
-sudo yum install ansible
+# Install Ansible using Python 2.7
+sudo /usr/bin/pip-2.7 install ansible
 ```
 
 Use Git to make the script executable.
@@ -257,14 +248,17 @@ ansible-playbook local.yml
 ```
 
 ```shell
-TASK [upgrade all packages] ****************************************************
-fatal: [localhost]: FAILED! => {"changed": false, "msg": "The Python 2 bindings
-for rpm are needed for this module. If you require Python 3 support use the
-`dnf` Ansible module instead.. The Python 2 yum module is needed for this
-module. If you require Python 3 support use the `dnf` Ansible module instead."}
-        to retry, use: --limit @/home/ec2-user/src/cloud9-dev/local.retry
-```
+PLAY [localhost] ***************************************************************
 
+TASK [Gathering Facts] *********************************************************
+ok: [localhost]
+
+TASK [upgrade all packages] ****************************************************
+ok: [localhost]
+
+PLAY RECAP *********************************************************************
+localhost                  : ok=2    changed=0    unreachable=0    failed=0   
+```
 
 See [Intro to Playbooks] or [Modules by Category].
 
