Updated Ansible article with template module instructions

--- a/_drafts/2019-03-23-ansible.md
+++ b/_drafts/2019-03-23-ansible.md
@@ -268,6 +268,9 @@ See [Intro to Playbooks] or [Modules by Category].
 
 # Modules
 
+We just covered a task that used the Yum module to update all the installed
+software packages on the server.
+
 Ansible supports many modules. You can view a list of all available modules
 by running:
 
@@ -284,4 +287,182 @@ ansible-doc <module-name>
 ansible-doc hostname
 ```
 
+You can also browse modules online starting with [Modules by Category].
 
+# Templates
+
+Most Unix/Linux utilities or daemons can be configured using simple text files.
+Ansible supports the ability to define your configurations within templates
+that support the Jinja2 template syntax. You can also simplify your
+configuration by creating YAML files that store the variables that are injected
+into these templates.
+
+Let's create a file called `gitconfig.j2` with our desired Git configuration.
+
+```INI
+[core]
+  editor = /usr/bin/nano
+[user]
+  name = PeeWee Herman
+  email = peewee@example.com
+```
+
+Now update the `local.yml` playbook file so that it also includes a task to
+obtain ouyput the current username variable (`ansible_user_id`), and then
+another task to configure the `.gitconfig` in that users home directory.
+
+```yaml
+---
+# This playbook deploys the entire setup to the Cloud9 development environment.
+- hosts: localhost
+  connection: local
+  tasks:
+    - name: upgrade all packages
+      yum:
+        name: '*'
+        state: latest
+    - debug: var=ansible_user_id
+    - name: configure git client
+      template:
+        src: gitconfig.j2
+        dest: "/home/{{ ansible_user_id }}/.gitconfig"
+        owner: "{{ ansible_user_id }}"
+        group: "{{ ansible_user_id }}"
+        mode: 0644
+```
+
+As you can see, the 'debug' task allowed us to see what value is registered
+for the `ansible_user_id` variable. This is useful for troubleshooting
+your task configurations when they are failing.
+
+```shell
+$ ansible-playbook local.yml
+
+PLAY [localhost] ***************************************************************
+
+TASK [Gathering Facts] *********************************************************
+ok: [localhost]
+
+TASK [upgrade all packages] ****************************************************
+ok: [localhost]
+
+TASK [debug] *******************************************************************
+ok: [localhost] => {
+    "ansible_user_id": "ec2-user"
+}
+
+TASK [configure git client] ****************************************************
+changed: [localhost]
+
+PLAY RECAP *********************************************************************
+localhost                  : ok=4    changed=1    unreachable=0    failed=0
+
+$ cat ~/.gitconfig
+[core]
+  editor = /usr/bin/nano
+[user]
+  name = PeeWee Herman
+  email = peewee@example.com
+```
+
+We can also define our variables within the playbook that can be included within
+the template. Redefine your `gitconfig.j2` file as shown. You'll notice we're
+also using the [ansible_managed] variable defined by Ansible itself in this 
+updated version of the template.
+
+__gitconfig.j2__
+```INI
+# {{ ansible_managed }}
+[core]
+  editor = /usr/bin/nano
+[user]
+  name = {{dev_name}}
+  email = {{dev_email}}
+```
+
+Next update the play in your playbook as follows.
+
+__local.yml__
+```yaml
+- hosts: localhost
+  connection: local
+  vars:
+    dev_name: PeeWee Herman
+    dev_email: peewee@example.com
+  tasks:
+    - name: upgrade all packages
+      yum:
+        name: '*'
+        state: latest
+    - debug: var=ansible_user_id
+    - name: configure git client
+      template:
+        src: gitconfig.j2
+        dest: "/home/{{ ansible_user_id }}/.gitconfig"
+        owner: "{{ ansible_user_id }}"
+        group: "{{ ansible_user_id }}"
+        mode: 0644
+```
+
+After saving the changes, run the playbook again.
+```bash
+$ ansible-playbook local.yml
+
+PLAY [localhost] ***************************************************************
+
+TASK [Gathering Facts] *********************************************************
+ok: [localhost]
+
+TASK [upgrade all packages] ****************************************************
+ok: [localhost]
+
+TASK [debug] *******************************************************************
+ok: [localhost] => {
+    "ansible_user_id": "ec2-user"
+}
+
+TASK [configure git client] ****************************************************
+changed: [localhost]
+
+PLAY RECAP *********************************************************************
+localhost                  : ok=4    changed=1    unreachable=0    failed=0   
+```
+
+Now check the state of the Git configuration file once again. The 'Ansible
+managed' comment at the top is simply a string that can be configured in
+the `ansible.cfg` to inform users that the configuration file being viewed
+is configured by Ansible.
+
+```bash
+$ cat ~/.gitconfig
+# Ansible managed
+[core]
+  editor = /usr/bin/nano
+[user]
+  name = PeeWee Herman
+  email = peewee@example.com
+```
+
+Although it causes Ansible to report that the template is not configured as
+expected everytime you run your play, you can configure Ansible to operate
+like it used to with the user and timestamp inserted into the "ansible_managed"
+string in every generated template.
+
+__ansible.cfg__
+```INI
+[defaults]
+inventory = hosts.yml
+ansible_managed = Ansible managed, do not edit directly: last update by {uid} on %Y-%m-%d, %H:%M:%S
+```
+
+```bash
+$ cat ~/.gitconfig
+# Ansible managed, do not edit directly: last update by ec2-user on 2019-03-25, 06:28:58
+[core]
+  editor = /usr/bin/nano
+[user]
+  name = PeeWee Herman
+  email = peewee@example.com
+```
+
+[ansible_managed]: https://docs.ansible.com/ansible/2.4/intro_configuration.html#ansible-managed
