--- a/_drafts/2019-03-23-ansible.md
+++ b/_drafts/2019-03-23-ansible.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 published: true
-title: Configuring Your Development Environment
-description: Using Ansible locally to configure Amazon Cloud9
+title: Setting up Development Environment with Ansible
+description: Using Ansible to customize the Amazon Cloud9 Environment
 image_url: /images/posts/2019-03-23-ansible-logo.png
 date: 2019-03-23 12:56:00 -0800
 categories:
@@ -15,48 +15,47 @@ tags:
   - configuration management
 ---
 
-This guide is oriented around applying the "infrastructure as code" methodology
-to your local development environment, with the goal of creating a Github
-repository that will facilitate the setup and maintenance of your development
-environment.
+This guide is oriented around the "infrastructure as code" methodology, where
+every step used to setup a development environment is stored in a version
+control system (Git).
 
-This guide provides steps based on the setup of an Amazon Linux EC2 instance
-connected to the [Amazon Cloud9 Web-based IDE]. I've chosen this environment
-for this guide to ensure the commands below will consistently work for you,
-and also because of the low cost. It is [free for new Amazon AWS users] for 12
-months, or less than $10 per month to those using a `t2.micro` EC2 instance that
-is turned off by Cloud9 after 30 minutes of non-activity.
+In this guide we'll be taking an [Amazon Cloud9 Web-based IDE] environment
+that is configured to use the default Amazon Linux EC2 instance for the command
+line environment. The Cloud9 service is free, as is the EC2 service to
+[new Amazon AWS users] for 12 months. If you've used Amazon AWS before, then
+your cost should be less than $10 per month as long as you are using a
+`t2.micro` EC2 instance that is configured to turn off after 30 minutes of
+non-activity.
 
-This guide assumes that you already have an [Amazon Cloud9 environment setup]
+This guide assumes that you already have an 
 with an EC2 instance running the default Amazon Linux distribution based on
 Red-Hat Enterprise Linux (RHEL). It also assumes that you have experince with
-[Git].
+[Git]. If you do not have an environment setup yet, see the
+[Amazon Cloud9 Environment Setup] guide to get started.
 
 After you are finished with this guide, you should be able to use the
 configuration you have established to maintain your development environment,
-as well as automate the setup of a new development environment in the event
-that your EC2 instance is terminated/destroyed.
+or automate the setup your environment once again should your EC2 instance
+become destroyed.
 
-You will also be able to continue beyond this guide in configuring additional
-systems to host your website or other applications, as well as automating
+You can also continue beyond this guide with the configuration of additional
+systems to host your websites or other applications, and automating the
 deployment of software updates to those systems.
 
-[free for new Amazon AWS users]: https://aws.amazon.com/free/
+[new Amazon AWS users]: https://aws.amazon.com/free/
+[Amazon cloud9 environment setup]: https://docs.aws.amazon.com/cloud9/latest/user-guide/setup-express.html
 [Amazon Cloud9 Web-based IDE]: https://aws.amazon.com/cloud9/
-[amazon cloud9 environment setup]: https://docs.aws.amazon.com/cloud9/latest/user-guide/setup-express.html
 [git]: https://en.wikipedia.org/wiki/Git
 
 # Ansible
 
 [Ansible] is a an open-source tool you can use to install and configure
-software on your Linux systems, as well as deploy new software updates.
+software on your Linux systems, as well as deploy your own software updates. In
+this guide we use Ansible to maintain the state of the development environment.
 
 Ansible is programmed in Python, however you do not need to know Python to use
-it. You may need to gain an understanding of [YAML], [Jinja templates], and read
+it. You may need to gain an understanding of [YAML], [Jinja templates], or read
 the [Ansible Project Documentation].
-
-This guide will use Ansible to setup and maintain your local development
-environment.
 
 [Ansible]: https://en.wikipedia.org/wiki/Ansible_(software)
 [Ansible Project Documentation]: https://docs.ansible.com/
@@ -66,27 +65,25 @@ environment.
 ## A Note About Idempotency
 
 Ansible is designed to be used to maintain your systems in an Idempotent manner.
-This means that you can run commands with Ansible that will always bring about
-the desired outcome, no matter how many times you run them.
+This means that you can execute tasks with Ansible that will always bring about
+the desired outcome, no matter how many times you run the tasks.
 
 Ansible does this by checking if an aspect of your system is in the desired
-state currently, and only if it is not does it make the required change to the
-system.
+state currently, and only if it is not in that state does the Ansible task make
+the required change to the system.
 
-It is possible that with certain practices you can run into an issue known as
-"configuration drift". Refer to [Ansible Idempotency and Configuration Drift]
+It is possible that Ansible can be used in a manner that leads to ab issue known
+as "configuration drift". Refer to [Ansible Idempotency and Configuration Drift]
 for more information on avoiding this issue.
 
 [Ansible Idempotency and Configuration Drift]: https://shadow-soft.com/ansible-idempotency-configuration-drift/
 
 # Establishing a Git repository
 
-You want to establish a [new Github repository] to store your Ansible
-configuration. After you've done this, use Git to clone the repository
-into your local environment.
+Create a [new Github repository] to store your Ansible configuration. After
+you've done this, use Git to clone the repository into your local environment.
 
 Here's the command I used with [my own repository]:
-
 ```bash
 git clone git@github.com:redconfetti/cloud9-dev.git
 ```
@@ -96,59 +93,47 @@ git clone git@github.com:redconfetti/cloud9-dev.git
 
 # Installing the Ansible Engine
 
-To ensure that we don't have any conflicts between Python v2.7 and v3.6
-installed
+Amazon Linux includes Python 2.7 and 3.5 by default. Installing Ansible using
+the Yum package manager leads to conflicts, so we'll be using the Python 2.7
+version of PIP to install Ansible.
 
 ```bash
 # Install Ansible using Python 2.7
 /usr/bin/pip-2.7 install ansible
 ```
 
-Next setup a script in your own repository to run initial
-setup commands (`setup.sh`).
-```bash
-#!/usr/bin/env bash
-
-# Update OS
-sudo yum update
-
-# Install Ansible using Python 2.7
-sudo /usr/bin/pip-2.7 install ansible
-```
-
-Use Git to make the script executable.
-```bash
-git add --chmod=+x setup.sh
-```
-
-See [Ansible Installation Guide] for other system installation instructions.
+If you're using a different Linux distribution, see the
+[Ansible Installation Guide] for other system installation instructions.
 
 [Ansible Installation Guide]: https://docs.ansible.com/ansible/latest/installation_guide/intro_installation.html
 
 # Ansible Configuration
 
 The default Ansible configuration file is located under
-`/etc/ansible/ansible.cfg`. A `.ansible.cfg` file located in your home directory
-can also be configured to over-ride these defaults.
+`/etc/ansible/ansible.cfg`. Ansible will over-ride these default settings if
+there are any found in a `.ansible.cfg` file located in your home directory, or
+an `ansible.cfg` file located in the current directory.
 
-Ansible is designed to be used from a specific machine that is designated as the
-"management node" that is used to orchestrate the setup and configuration of
-many other machines. This is why the default configurations exist globally
+Ansible is designed to be used from a specific machine, designated as the
+"management node", that is used to orchestrate the setup and configuration of
+other machines. This is why the default configurations exist globally
 under `/etc/ansible`.
 
-We want Ansible to use the files stored in our Git repository, so create a
-new `ansible.cfg` file in the root folder of the new repository.
+Fo our purposes we want Ansible to use the configuration we place in our
+repository, so create a new `ansible.cfg` file in the root folder of your
+repository with the following contents
 
-```
+```INI
 [defaults]
 inventory = hosts.yml
 ```
 
-When running Ansible commands from the root directory of our repository, it will
-also over-ride the default and user-specific configurations, but keep in mind
-that this method can introduce a security risk.
+This will help us to avoid needing to use the `-i hosts.yml` parameter with
+our Ansible commands, however it does introduce a possible security risk.
+Since we're running an EC2 instance that we're not sharing with other users,
+we're not running the risk of another user modifying our `ansible.cfg` file.
 
-See Ansible Configuration Documentation:
+Ansible Configuration Documentation:
 
 - [Avoiding security risks with ansible.cfg in the current directory]
 - [Configuring Ansible]
@@ -166,19 +151,22 @@ Ansible is able to manage the state of multiple machines. By default, the
 inventory is defined in `/etc/ansible/hosts` using a format similar to an
 [INI file]. Alternatively you can use a YAML file to define your inventory.
 
-As you saw above, we configured Ansible to recognize the `hosts.yaml` file
+As you saw above, we configured Ansible to recognize the `hosts.yml` file
 located in the root directory of the repository.
 
-Create that file now with the following contents that defines the local
+Create the `hosts.yml` file with the following contents that defines the local
 machine as 'local'.
-```yaml
+```yml
 all:
   hosts:
     local:
       ansible_host: localhost
       ansible_connection: local
-      ansible_python_interpreter: /usr/bin/python27
 ```
+
+This configures a host named 'local' that represents the local EC2 instance
+that you're working from when you use the command line interface (Terminal)
+in Cloud9.
 
 For more information, see [Ansible - Working with Inventory]
 
@@ -187,9 +175,8 @@ For more information, see [Ansible - Working with Inventory]
 
 # Ansible Ad-Hoc Commands
 
-Ansible is designed to connect to each host using SSH key authentication,
-run the commands necessary, and then output the results of each task in the
-output of the command line. Because we're configured to connect to our local
+Ansible is designed to connect to hosts configured in your inventory file using
+SSH key authentication. Because we're configured to connect to our local
 system, we do not have to worry about SSH connections or configuration.
 
 Ansible can be used to perform checks against hosts using a single command
@@ -204,57 +191,59 @@ local | SUCCESS => {
 }
 ```
 
-Now we're ready to get started with the actual configuration.
+If you see the output above indicating success, then you're ready to move onto
+the next step.
 
-See [Introduction To Ad-Hoc Commands]
+For more information, see [Introduction To Ad-Hoc Commands].
 
 [Introduction To Ad-Hoc Commands]: https://docs.ansible.com/ansible/latest/user_guide/intro_adhoc.html
 
 # Ansible Playbooks
 
-Ad-hoc commands are useful, but playbooks are where we can define the state of
-our system(s).
+Ad-hoc commands are useful, but playbooks are where we can define multiple
+tasks that maintain the state of your system(s).
 
 Much like the `hosts.yml` file defined above, playbooks are defined in YAML
 format. YAML is not a programming language, but a format for storing
 information. In this case the information is our configuration that Ansible
-modules are defined to interpret and apply to certain hosts.
+modules are defined to interpret and apply to the hosts we specify.
 
-A playbook can contain one or more "plays" that applies a certain state known
-as a "role" to a group of hosts. A role is represented by one or more tasks
-performed by an Ansible module.
+A playbook can contain one or more "plays" that applies a certain state to a
+group of hosts. 
 
-The Amazon Linux distribution used by the EC2 instance uses a package manager
-called Yum (Yellowdog Updater Modified). Ansible provides the [Yum module] to
-use this package manager to install or update the software on the host.
+The Amazon Linux distribution uses a package manager called Yum (Yellowdog
+Updater Modified). Ansible provides a [Yum module] which allows us to use this
+package manager to install and update software packages on the host.
 
-Create a file named `local.yml` with the following contents.
-```yaml
+Create a file named `local.yml` with the following contents in your root
+directory.
+
+```yml
 ---
 # This playbook deploys the entire setup to the Cloud9 development environment.
-- hosts: localhost
-  connection: local
+- hosts: local
   tasks:
     - name: upgrade all packages
+      become: yes
       yum:
         name: '*'
         state: latest
 ```
 
-Run the following command to run this playbook against the local environment.
-
+Next, run the following command to run this playbook.
 ```bash
 ansible-playbook local.yml
 ```
 
-```shell
-PLAY [localhost] ***************************************************************
+You should see output similar to this:
+```bash
+PLAY [local] *******************************************************************
 
 TASK [Gathering Facts] *********************************************************
-ok: [localhost]
+ok: [local]
 
 TASK [upgrade all packages] ****************************************************
-ok: [localhost]
+ok: [local]
 
 PLAY RECAP *********************************************************************
 localhost                  : ok=2    changed=0    unreachable=0    failed=0   
@@ -291,104 +280,32 @@ You can also browse modules online starting with [Modules by Category].
 
 # Templates
 
-Most Unix/Linux utilities or daemons can be configured using simple text files.
-Ansible supports the ability to define your configurations within templates
-that support the Jinja2 template syntax. You can also simplify your
-configuration by creating YAML files that store the variables that are injected
-into these templates.
+Most Unix/Linux utilities and daemons can be configured using plain text files.
+Ansible supports the ability to define configuration file templates that use the
+Jinja2 template syntax.
 
-Let's create a file called `gitconfig.j2` with our desired Git configuration.
-
-```INI
-[core]
-  editor = /usr/bin/nano
-[user]
-  name = PeeWee Herman
-  email = peewee@example.com
-```
-
-Now update the `local.yml` playbook file so that it also includes a task to
-obtain ouyput the current username variable (`ansible_user_id`), and then
-another task to configure the `.gitconfig` in that users home directory.
-
-```yaml
----
-# This playbook deploys the entire setup to the Cloud9 development environment.
-- hosts: localhost
-  connection: local
-  tasks:
-    - name: upgrade all packages
-      yum:
-        name: '*'
-        state: latest
-    - debug: var=ansible_user_id
-    - name: configure git client
-      template:
-        src: gitconfig.j2
-        dest: "/home/{{ ansible_user_id }}/.gitconfig"
-        owner: "{{ ansible_user_id }}"
-        group: "{{ ansible_user_id }}"
-        mode: 0644
-```
-
-As you can see, the 'debug' task allowed us to see what value is registered
-for the `ansible_user_id` variable. This is useful for troubleshooting
-your task configurations when they are failing.
-
-```shell
-$ ansible-playbook local.yml
-
-PLAY [localhost] ***************************************************************
-
-TASK [Gathering Facts] *********************************************************
-ok: [localhost]
-
-TASK [upgrade all packages] ****************************************************
-ok: [localhost]
-
-TASK [debug] *******************************************************************
-ok: [localhost] => {
-    "ansible_user_id": "ec2-user"
-}
-
-TASK [configure git client] ****************************************************
-changed: [localhost]
-
-PLAY RECAP *********************************************************************
-localhost                  : ok=4    changed=1    unreachable=0    failed=0
-
-$ cat ~/.gitconfig
-[core]
-  editor = /usr/bin/nano
-[user]
-  name = PeeWee Herman
-  email = peewee@example.com
-```
-
-We can also define our variables within the playbook that can be included within
-the template. Redefine your `gitconfig.j2` file as shown. You'll notice we're
-also using the [ansible_managed] variable defined by Ansible itself in this 
-updated version of the template.
-
-__gitconfig.j2__
+Let's create a file called `gitconfig.j2` to define our Git client configuration.
 ```INI
 # {{ ansible_managed }}
 [core]
   editor = /usr/bin/nano
 [user]
-  name = {{dev_name}}
-  email = {{dev_email}}
+  name = {{git_client_name}}
+  email = {{git_client_name}}
 ```
 
-Next update the play in your playbook as follows.
+Now update the `local.yml` playbook file so that it includes the 'vars' that
+define our git client name and email address. Also add the tasks to output the
+value of the `ansible_user_id` variable, and configure the `.gitconfig` in that
+users home directory.
 
-__local.yml__
-```yaml
-- hosts: localhost
-  connection: local
+```yml
+---
+# This playbook deploys the entire setup to the Cloud9 development environment.
+- hosts: local
   vars:
-    dev_name: PeeWee Herman
-    dev_email: peewee@example.com
+    git_client_name: PeeWee Herman
+    git_client_email: peewee@example.com
   tasks:
     - name: upgrade all packages
       yum:
@@ -397,41 +314,41 @@ __local.yml__
     - debug: var=ansible_user_id
     - name: configure git client
       template:
-        src: gitconfig.j2
+        src: gitconfig
         dest: "/home/{{ ansible_user_id }}/.gitconfig"
         owner: "{{ ansible_user_id }}"
         group: "{{ ansible_user_id }}"
         mode: 0644
 ```
 
-After saving the changes, run the playbook again.
+As you can see, the 'debug' task allows us to see what value is registered
+for the `ansible_user_id` variable. This is useful for troubleshooting
+your task configurations when they are failing.
+
 ```bash
 $ ansible-playbook local.yml
 
-PLAY [localhost] ***************************************************************
+PLAY [local] *******************************************************************
 
 TASK [Gathering Facts] *********************************************************
-ok: [localhost]
+ok: [local]
 
 TASK [upgrade all packages] ****************************************************
-ok: [localhost]
+ok: [local]
 
 TASK [debug] *******************************************************************
-ok: [localhost] => {
+ok: [local] => {
     "ansible_user_id": "ec2-user"
 }
 
 TASK [configure git client] ****************************************************
-changed: [localhost]
+changed: [local]
 
 PLAY RECAP *********************************************************************
 localhost                  : ok=4    changed=1    unreachable=0    failed=0   
 ```
 
-Now check the state of the Git configuration file once again. The 'Ansible
-managed' comment at the top is simply a string that can be configured in
-the `ansible.cfg` to inform users that the configuration file being viewed
-is configured by Ansible.
+Now check the state of the Git configuration file.
 
 ```bash
 $ cat ~/.gitconfig
@@ -443,10 +360,14 @@ $ cat ~/.gitconfig
   email = peewee@example.com
 ```
 
-Although it causes Ansible to report that the template is not configured as
-expected everytime you run your play, you can configure Ansible to operate
-like it used to with the user and timestamp inserted into the "ansible_managed"
-string in every generated template.
+The 'Ansible managed' comment at the top is simply a string that can be
+configured in the `ansible.cfg` to inform users that the configuration file
+being viewed is configured by Ansible.
+
+`Ansible managed` is the default string for this variable. You can redefine
+this string to include the user-id of the Ansible user as well as the date and
+time, although this will result in Ansible reporting that the coniguration
+file has been changed everytime you run the task.
 
 __ansible.cfg__
 ```INI
@@ -454,6 +375,35 @@ __ansible.cfg__
 inventory = hosts.yml
 ansible_managed = Ansible managed, do not edit directly: last update by {uid} on %Y-%m-%d, %H:%M:%S
 ```
+
+Let's run the Playbook one more time.
+
+```bash
+$ ansible-playbook local.yml
+
+PLAY [local] *******************************************************************
+
+TASK [Gathering Facts] *********************************************************
+ok: [local]
+
+TASK [upgrade all packages] ****************************************************
+ok: [local]
+
+TASK [debug] *******************************************************************
+ok: [local] => {
+    "ansible_user_id": "ec2-user"
+}
+
+TASK [configure git client] ****************************************************
+changed: [local]
+
+PLAY RECAP *********************************************************************
+localhost                  : ok=4    changed=1    unreachable=0    failed=0  
+```
+
+As you can see, it reports that it changed the configuration file. If we check
+the configuration file, you'll see that it now includes the message with user,
+date, and time.
 
 ```bash
 $ cat ~/.gitconfig
@@ -466,3 +416,332 @@ $ cat ~/.gitconfig
 ```
 
 [ansible_managed]: https://docs.ansible.com/ansible/2.4/intro_configuration.html#ansible-managed
+
+# Roles
+
+If you placed all your tasks in a playbook, it could get very large and wouldn't
+be as easy to manage. This is why Ansible supports grouping your automation
+components (variables, templates, tasks, etc) into re-usable "roles".
+
+It's often that a role named 'common' is created to store settings that apply
+across all your hosts, such as updating the system software using Yum,
+setting the timezone, etc. Other roles are defined separate of the 'common' role
+that apply to certain nodes of your cluster or network, such as 'webserver' or
+'loadbalancer'. You can even get more detailed with roles named after the
+daemons you want running, such as 'apache' or 'nginx'. It's all up to you.
+
+Taken from [Ansible Docs - Roles]
+
+> Roles expect files to be in certain directory names. Roles must include at
+> least one of these directories, however it is perfectly fine to exclude any
+> which are not being used. When in use, each directory must contain a
+> `main.yml` file, which contains the relevant content:
+> 
+> * `tasks` - contains the main list of tasks to be executed by the role.
+> * `handlers` - contains handlers, which may be used by this role or even anywhere outside this role.
+> * `files` - contains files which can be deployed via this role.
+> * `templates` - contains templates which can be deployed via this role.
+> * `vars` - other variables for the role (see [Ansible Docs - Using Variables] for more information).
+> * `defaults` - default variables for the role (see [Ansible Docs - Using Variables] for more information).
+> * `meta` - defines some meta data for this role. See below for more details.
+
+Let's move our tasks to a new role called 'development'.
+
+To get started, we'll establish a directory for our roles to contain our
+`development` role. We'll set it up with a `tasks` and `templates` folder.
+Within `tasks` we'll create a new `main.yml` file, and we'll move our Git
+configuration template into the `templates` folder.
+
+```bash
+mkdir -p roles/development/tasks
+mkdir -p roles/development/templates
+touch roles/development/tasks/main.yml
+mv gitconfig.j2 roles/development/templates
+```
+
+It should look like this when you're done:
+
+- roles
+  - development
+    - tasks
+      - main.yml
+    - templates
+      - gitconfig.j2
+
+Next move your tasks from the `local.yml` to `roles/development/tasks/main.yml`.
+Additionally, update the path for the `gitconfig` template so that it is
+reflected as `templates/gitconfig`.
+
+```yml
+---
+- name: upgrade all packages
+  become: yes
+  yum:
+    name: '*'
+    state: latest
+- debug: var=ansible_user_id
+- name: configure git client
+  template:
+    src: templates/gitconfig
+    dest: "/home/{{ ansible_user_id }}/.gitconfig"
+    owner: "{{ ansible_user_id }}"
+    group: "{{ ansible_user_id }}"
+    mode: 0644
+```
+
+Now update `local.yml` so that it no longer defines the tasks for the play, but
+instead points to the `development` role.
+
+```yml
+---
+# This playbook deploys the entire setup to the Cloud9 development environment.
+- hosts: local
+  vars:
+    git_client_name: PeeWee Herman
+    git_client_email: peewee@example.com
+    timezone: America/Los_Angeles
+  roles:
+    - development
+```
+
+If you run `ansible-playbook local.yml` once again, the output should be the
+same as before with no errors.
+
+[Ansible Docs - Roles]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html
+
+## Ansible Variables
+
+The Ansible engine makes it possible to re-use a role that you have defined
+to different hosts with differing configurations. This is made possible through
+the use of variables.
+
+Variables can be defined in your hosts file per each host.
+
+For instance, we can move our Git name and email address from our `local.yml`
+playbook, and place it within `hosts.yml` so that it applies to our `local`
+host.
+
+Here we've defined a 'development' group, and have placed our 'local' host
+underneath that group. We've also defined the variables that should apply to
+all hosts within that group.
+```yml
+all:
+  children:
+    development:
+      hosts:
+        local:
+          ansible_host: localhost
+          ansible_connection: local
+      vars:
+        git_client_name: PeeWee Herman
+        git_client_email: peewee@example.com
+        timezone: America/Los_Angeles
+```
+
+If you want to inspect your inventory for errors, you can use the
+`ansible-inventory` command to inspect how Ansible is interpretting your
+configuration.
+
+```bash
+$ ansible-inventory --list
+{
+    "_meta": {
+        "hostvars": {
+            "local": {
+                "ansible_connection": "local", 
+                "ansible_host": "localhost", 
+                "git_client_email": "peewee@example.com", 
+                "git_client_name": "PeeWee Herman", 
+                "repository": "https://github.com/redconfetti/redconfetti.github.io", 
+                "timezone": "America/Los_Angeles"
+            }
+        }
+    }, 
+    "all": {
+        "children": [
+            "development", 
+            "ungrouped"
+        ]
+    }, 
+    "development": {
+        "hosts": [
+            "local"
+        ]
+    }, 
+    "ungrouped": {}
+}
+
+$ ansible-inventory --graph
+@all:
+  |--@development:
+  |  |--local
+  |--@ungrouped:
+```
+
+The preferred way to store variables isn't to define them in the `hosts.yml`
+file though. Instead you can create a `host_vars` directory, and then name
+the files within it after each host. You can also create a `group_vars`
+directory, and then name the files within it after each group.
+
+Let's create a host variable file for our 'local' host.
+```bash
+mkdir host_vars
+touch host_vars/local.yml
+```
+
+Next let's move our variables from the `hosts.yml` into our
+`host_vars/local.yml` file.
+
+_host_vars/local.yml_
+```yml
+git_client_name: PeeWee Herman
+git_client_email: peewee@example.com
+timezone: America/Los_Angeles
+```
+
+This should result in our hosts file being slim again.
+
+_hosts.yml_
+```yml
+all:
+  children:
+    development:
+      hosts:
+        local:
+          ansible_host: localhost
+          ansible_connection: local
+```
+
+For more information, see [Ansible Docs - Using Variables].
+
+[Ansible Docs - Using Variables]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_variables.html
+
+## Role Defaults
+
+Roles are intended to be re-usable, and thus they can be structured to use
+default configuration values. For instance, you could apply a role to one host
+with a certain configuration, yet apply the same role to another host using an
+alternative configuration.
+
+The defaults for your role are intended to be defined in your role directory
+under `defaults/main.yml`.
+
+If we wanted to make our role more re-usable, we could define defaults for
+the name and email address used by the Git client. Let's establish a `defaults`
+directory containing a `main.yml`.
+
+```bash
+mkdir -p roles/development/defaults
+touch roles/development/defaults/main.yml
+```
+
+After you've done this, add the following to `defaults/main.yml`.
+```yml
+
+```
+
+## Ansible Galaxy
+
+It is possible to install and use roles that are published in a public
+repository of roles known as [Ansible Galaxy]. It's also possible to obtain
+roles packaged on the web, or published in Git repositories (Github, Gitlab, or
+Bitbucket).
+
+You can create a `requirements.yml` file in the root of your Ansible repository
+to store the roles that your configuration requires.
+```yml
+# Install timezone role
+- src: yatesr.timezone
+```
+
+To install the required roles, run `ansible-galaxy install -r requirements.yml`.
+```bash
+$ ansible-galaxy install -r requirements.yml
+- downloading role 'timezone', owned by yatesr
+- downloading role from https://github.com/yatesr/ansible-timezone/archive/1.1.0.tar.gz
+- extracting yatesr.timezone to /home/ec2-user/.ansible/roles/yatesr.timezone
+- yatesr.timezone (1.1.0) was installed successfully
+```
+
+Now that you've installed the [timezone role], add it to your `local.yml` so
+that it configures your development environment to use the
+[TZ database time zone] that applies to your location. We're using
+`America/Los_Angeles` to configure the system to use the Pacific Daylight Time
+(PDT) time zone.
+
+```yml
+---
+# This playbook deploys the entire setup to the Cloud9 development environment.
+- hosts: localhost
+  vars:
+    git_client_name: PeeWee Herman
+    git_client_email: peewee@example.com
+    timezone: America/Los_Angeles
+  roles:
+    - development
+    - yatesr.timezone
+```
+
+Let's run our playbook again to see this in action.
+```bash
+$ ansible-playbook local.yml
+
+PLAY [localhost] ***************************************************************
+
+TASK [Gathering Facts] *********************************************************
+ok: [localhost]
+
+TASK [yatesr.timezone : include_vars] ******************************************
+ok: [localhost] => (item=/home/ec2-user/.ansible/roles/yatesr.timezone/vars/../vars/RedHat.yml)
+
+TASK [yatesr.timezone : Install tzdata for Debian based distros] ***************
+skipping: [localhost]
+
+TASK [yatesr.timezone : Install tzdata for RedHat based distros] ***************
+ok: [localhost]
+
+TASK [yatesr.timezone : Install tzdata for Archlinux based distros] ************
+skipping: [localhost]
+
+TASK [yatesr.timezone : Set timezone config] ***********************************
+changed: [localhost]
+
+TASK [yatesr.timezone : Set link to localtime] *********************************
+changed: [localhost]
+
+TASK [upgrade all packages] ****************************************************
+ok: [localhost]
+
+TASK [debug] *******************************************************************
+ok: [localhost] => {
+    "ansible_user_id": "ec2-user"
+}
+
+TASK [configure git client] ****************************************************
+changed: [localhost]
+
+PLAY RECAP *********************************************************************
+localhost                  : ok=8    changed=3    unreachable=0    failed=0  
+```
+
+Now when we ask the system to output the date, we get the Pacific date/time.
+```bash
+$ date
+Mon Mar 25 21:17:18 PDT 2019
+```
+
+See [Ansible Galaxy Docs] for more information.
+
+[Ansible Galaxy]: https://galaxy.ansible.com/
+[Ansible Galaxy Docs]: https://docs.ansible.com/ansible/latest/reference_appendices/galaxy.html
+[Reusable Playbooks - Roles]: https://docs.ansible.com/ansible/latest/user_guide/playbooks_reuse_roles.html
+[timezone role]: https://galaxy.ansible.com/yatesr/timezone
+[TZ database time zone]: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+
+# Ansible Vault
+
+We want to configure our workstation so that we have an SSH key pair
+established, ensure that the key is added to our Github account, and that all
+our repositories are cloned to `~/src`.
+
+## Ansible Facts
